fix(Sensors): Makes sensor pings always visible, even when using the sensor sonar. Closes #2938

--- a/src/components/views/Sensors/GridDom/style.scss
+++ b/src/components/views/Sensors/GridDom/style.scss
@@ -101,7 +101,8 @@
       transition: all 10s ease;
       background-size: 600% 600%;
     }
-    .sensor-contacts-holder {
+    .sensor-contacts-holder,
+    .sensor-ping-holder {
       width: 100%;
       height: 100%;
       position: absolute;
